; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_swap_owner.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_swap_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i32, %struct.nn_fsm* }
%struct.nn_fsm_owner = type { i32, %struct.nn_fsm* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_swap_owner(%struct.nn_fsm* %0, %struct.nn_fsm_owner* %1) #0 {
  %3 = alloca %struct.nn_fsm*, align 8
  %4 = alloca %struct.nn_fsm_owner*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nn_fsm*, align 8
  store %struct.nn_fsm* %0, %struct.nn_fsm** %3, align 8
  store %struct.nn_fsm_owner* %1, %struct.nn_fsm_owner** %4, align 8
  %7 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %8 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %5, align 4
  %10 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %11 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %10, i32 0, i32 1
  %12 = load %struct.nn_fsm*, %struct.nn_fsm** %11, align 8
  store %struct.nn_fsm* %12, %struct.nn_fsm** %6, align 8
  %13 = load %struct.nn_fsm_owner*, %struct.nn_fsm_owner** %4, align 8
  %14 = getelementptr inbounds %struct.nn_fsm_owner, %struct.nn_fsm_owner* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %17 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load %struct.nn_fsm_owner*, %struct.nn_fsm_owner** %4, align 8
  %19 = getelementptr inbounds %struct.nn_fsm_owner, %struct.nn_fsm_owner* %18, i32 0, i32 1
  %20 = load %struct.nn_fsm*, %struct.nn_fsm** %19, align 8
  %21 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %22 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %21, i32 0, i32 1
  store %struct.nn_fsm* %20, %struct.nn_fsm** %22, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.nn_fsm_owner*, %struct.nn_fsm_owner** %4, align 8
  %25 = getelementptr inbounds %struct.nn_fsm_owner, %struct.nn_fsm_owner* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 8
  %26 = load %struct.nn_fsm*, %struct.nn_fsm** %6, align 8
  %27 = load %struct.nn_fsm_owner*, %struct.nn_fsm_owner** %4, align 8
  %28 = getelementptr inbounds %struct.nn_fsm_owner, %struct.nn_fsm_owner* %27, i32 0, i32 1
  store %struct.nn_fsm* %26, %struct.nn_fsm** %28, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
